--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "chart.js": "^4.5.0",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.8.2",
     "sqlocal": "^0.14.2",
     "styled-components": "^6.1.19",
-    "use-debounce": "^10.0.5",
-    "vite-plugin-svgr": "^4.3.0",
+    "use-debounce": "^10.0.6",
+    "vite-plugin-svgr": "^4.5.0",
     "zod": "^4.1.5"
   },
   "scripts": {
@@ -40,11 +42,11 @@
     "@storybook/addon-links": "^9.1.4",
     "@storybook/react-vite": "^9.1.4",
     "@storybook/test-runner": "^0.23.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.30.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "drizzle-kit": "^0.18.1",
+    "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -52,7 +54,7 @@
     "prop-types": "^15.8.1",
     "react-docgen-typescript-plugin": "^1.0.8",
     "storybook": "^9.1.4",
-    "vite": "^7.0.2",
+    "vite": "^7.1.4",
     "vitest": "^3.2.4"
   }
 }
