--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "exerdice",
+  "name": "exerdice-react",
   "version": "1.0.0",
-  "description": "A React/TypeScript/Vite WASM app for rolling dice and tracking activities",
+  "description": "A React/TypeScript/Vite app for rolling dice and tracking activities",
   "author": "Joe Tinkler",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JoeTinkler/exerdice-wasm"
+    "url": "https://github.com/JoeTinkler/exerdice-react"
   },
   "bugs": {
-    "url": "https://github.com/JoeTinkler/exerdice-wasm/issues"
+    "url": "https://github.com/JoeTinkler/exerdice-react/issues"
   },
   "license": "MIT",
   "private": true,
