--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@3d-dice/dice-box": "^1.1.4",
+    "@3d-dice/dice-parser-interface": "^0.2.1",
     "chart.js": "^4.5.0",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
@@ -24,6 +26,7 @@
     "react-router-dom": "^7.8.2",
     "sqlocal": "^0.14.2",
     "styled-components": "^6.1.19",
+    "udsv": "^0.7.3",
     "use-debounce": "^10.0.6",
     "vite-plugin-svgr": "^4.5.0",
     "zod": "^4.1.5"
