--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-simple-code-editor": "^0.14.1",
+    "sql-highlight": "^6.1.0",
     "sqlocal": "^0.14.2",
     "styled-components": "^6.1.19",
     "udsv": "^0.7.3",
